--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - build
   - test
+  - deploy
 
 build website:
     image: node:20-alpine
@@ -24,3 +25,11 @@ test website:
        - serve -s build &
        - sleep 10
        - curl http://localhost:3000 | grep "React App"
+
+deploy to s3:
+    stage: deploy
+    image: 
+        name: amazon/aws-cli:2.4.11
+        entrypoint: [""]
+    script:
+         - aws --version
