--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - test
   - deploy
 
-build website:
+.build website:
     image: node:20-alpine
     stage: build
     script:
@@ -16,7 +16,7 @@ build website:
         - build
 
         
-test website:
+.test website:
    image: node:20-alpine
    stage: test
    script:
@@ -33,3 +33,5 @@ deploy to s3:
         entrypoint: [""]
     script:
          - aws --version
+         - echo "Hello S3" >> test.txt
+         - aws s3 cp test.txt s3://$AWS_S3_BUCKET/test.txt
