--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,3 +33,4 @@ deploy to s3:
         entrypoint: [""]
     script:
          - aws --version
+         - aws s3 sync build s3://$AWS_S3_BUCKET --delete
