--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,9 @@ deploy to s3:
     image: 
         name: amazon/aws-cli:2.4.11
         entrypoint: [""]
+    rules:
+        - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
     script:
          - aws --version
+         - echo $CI_COMMIT_REF_NAME
          - aws s3 sync build s3://$AWS_S3_BUCKET --delete
