--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,11 @@ stages:
   - build
   - test
   - deploy
+  - post deploy
+
+variables:
+    APP_BASE_URL: http://hesham-20240316.s3-website.eu-north-1.amazonaws.com
+
 
 build website:
     image: node:20-alpine
@@ -37,3 +42,11 @@ deploy to s3:
          - aws --version
          - echo $CI_COMMIT_REF_NAME
          - aws s3 sync build s3://$AWS_S3_BUCKET --delete
+
+production tests:
+    stage: post deploy
+    image: curlimages/curl
+    rules:
+        - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+    script:
+          - curl $APP_BASE_URL | grep "React App"
