--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,8 @@ stages:
   - build
   - test
   - staging deploy
-  - test staging
   - deploy production
-  - test production
-
-variables:
-    APP_BASE_URL: http://hesham-20240316.s3-website.eu-north-1.amazonaws.com
-    APP_BASE_URL_STAGING: http://ci-cd-staging.s3-website.eu-north-1.amazonaws.com
-
-
+  
 build website:
     image: node:20-alpine
     stage: build
@@ -35,7 +28,8 @@ test website:
        - curl http://localhost:3000 | grep "React App"
 
 deploy to staging:
-    stage: staging deploy
+    stage: deploy staging
+    environment: staging
     image: 
         name: amazon/aws-cli:2.4.11
         entrypoint: [""]
@@ -45,18 +39,12 @@ deploy to staging:
          - aws --version
          - echo $CI_COMMIT_REF_NAME
          - aws s3 sync build s3://$AWS_S3_BUCKET_STAGING --delete
-
-staging tests:
-    stage: test staging
-    image: curlimages/curl
-    rules:
-        - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
-    script:
-          - curl $APP_BASE_URL_STAGING | grep "React App"
-
+         - curl --version
+         - curl $APP_BASE_URL_STAGING | grep "React App"
 
 deploy to production:
     stage: deploy production
+    environment: production
     image: 
         name: amazon/aws-cli:2.4.11
         entrypoint: [""]
@@ -66,11 +54,4 @@ deploy to production:
          - aws --version
          - echo $CI_COMMIT_REF_NAME
          - aws s3 sync build s3://$AWS_S3_BUCKET --delete
-
-production tests:
-    stage: test production
-    image: curlimages/curl
-    rules:
-        - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
-    script:
-          - curl $APP_BASE_URL | grep "React App"
+         - curl $APP_BASE_URL | grep "React App"
