--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ test website:
          - echo $CI_COMMIT_REF_NAME
          - aws s3 sync build s3://$AWS_S3_BUCKET --delete
          - curl $CI_ENVIRONMENT_URL | grep "React App"
-         - curl $CI_ENVIRONMENT_URL | cat version.html
+         - curl $CI_ENVIRONMENT_URL/version.html | grep $APP_VERSION
 
 deploy to staging:
     stage: deploy staging
