--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,5 +51,6 @@ deploy to staging:
 
 deploy to production:
     stage: deploy production
+    when: manual
     environment: production
     extends: .deploy
